[gd_scene load_steps=4 format=3 uid="uid://dju530hrgx84g"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_hj1u5"]
[ext_resource type="FontFile" uid="uid://cuqt7of2lqahw" path="res://assets/fonts/PixelOperator8.ttf" id="2_do2pn"]
[ext_resource type="FontFile" uid="uid://d23yx6k38h60i" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_xpk73"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_hj1u5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Instructions" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -154.0
offset_right = 224.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_do2pn")
theme_override_font_sizes/font_size = 32
text = "Hide from the Enemies!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TutorialButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xpk73")
theme_override_font_sizes/font_size = 64
text = "Tutorial
"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
